# simple-lang

./: CMakeLists.txt  LICENSE  Makefile  README.md  error.h  go.mod  main.cpp  out.html  output.html  position.cpp  position.h  run_test.py  scanner.cpp  scanner.h  simple_lang  testfile.txt  token.cpp  token.h
ast/: ast.h  decl.h  define.h  expr.h  field.h  file.h  stmt.h  type_node.h
check/: check.cpp  check.h
parser/: parser.cpp  parser.h  var_table.cpp  var_table.h
scanner/: scanner.cpp  scanner.h
testdata/parser/1/: testfile10.txt  testfile6.txt  testfile7.txt  testfile8.txt
testdata/parser/2/: testfile1.txt  testfile10.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt  testfile7.txt  testfile8.txt  testfile9.txt
testdata/parser/3/: testfile10.txt  testfile7.txt  testfile8.txt  testfile9.txt
testdata/parser/4/: testfile1.txt  testfile10.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt  testfile7.txt  testfile8.txt  testfile9.txt
testdata/parser/5/: testfile10.txt  testfile8.txt  testfile9.txt
testdata/parser/6/: testfile1.txt  testfile10.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt  testfile7.txt  testfile8.txt  testfile9.txt
token/: position.cpp  position.h  token.cpp  token.h
